[package]
name = "driftdb-server"
version = "0.1.3"
edition = "2021"
description = "A real-time data backend for browser-based applications (server binary)."
license = "MIT"
repository = "https://github.com/drifting-in-space/driftdb"
homepage = "https://driftdb.com"
documentation = "https://driftdb.com"
readme = "README.md"

[dependencies]
anyhow = "1.0.68"
axum = { version = "0.6.1", features = ["ws"] }
clap = { version = "4.0.32", features = ["derive"] }
hyper = "0.14.23"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.3.5", features = ["trace", "cors"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
driftdb = {path = "../driftdb", version="0.1.0"}
dashmap = "5.4.0"
uuid = { version = "1.3.0", features = ["v4"] }
