[package]
name = "driftdb-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
driftdb = {path = "../driftdb", version="0.1.0"}
web-sys = { version = "0.3.61", features = ["WebSocket"] }
wasm-bindgen = "0.2.84"
anyhow = "1.0.69"
js-sys = "0.3.61"
log = "0.4.17"
console_log = "0.2.1"
serde_cbor = "0.11.2"
