[package]
name = "driftdb-worker"
version = "0.1.3"
edition = "2018"
description = "A real-time data backend for browser-based applications (Cloudflare worker)."
license = "MIT"
repository = "https://github.com/drifting-in-space/driftdb"
homepage = "https://driftdb.com"
documentation = "https://driftdb.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "fetch-event"]
fetch-event = []

[dependencies]
cfg-if = "0.1.2"
console_error_panic_hook = { version = "0.1.1", optional = true }
driftdb = {path = "../driftdb", version="0.1.0"}
getrandom = { version = "0.2.8", features = ["js"] }
gloo-utils = { version = "0.1.6", features = ["serde"] }
rand = "0.8.5"
serde_json = "1.0.67"
tokio-stream = "0.1.11"
worker = "0.0.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
