[package]
name = "driftdb"
version = "0.1.2"
edition = "2021"
description = "A real-time data backend for browser-based applications (core library)."
license = "MIT"
repository = "https://github.com/drifting-in-space/driftdb"
homepage = "https://driftdb.com"
documentation = "https://driftdb.com"

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
